--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NoteKeeper | Sarthak Bandil</title>
+    <title>NoteKeeper | Kishan Salvi</title>
     <link rel="icon" href="./src/assets/images/logo.png" type="image/png" />
   </head>
   <body>
